[build-system]
requires = ["scikit-build-core", "nanobind >=2.4", "typing-extensions >=4.0; python_version <= '3.11'", "scipy>=1.13", "gemmi==0.7.3", "scikit-learn>=1.6"]
build-backend = "scikit_build_core.build"

# edit from here
[project]
name = "bobkit"
authors = [
  { name = "SOON WEN HOH" },
  { email = "soonwen.hoh@york.ac.uk" },
]
description = "BOBKit: Python Modules for Building Biomacromolecular Models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
"Development Status :: 1 - Planning",
"Intended Audience :: Developers",
"Intended Audience :: Science/Research",
"Topic :: Software Development :: Libraries :: Python Modules",
"Topic :: Scientific/Engineering :: Bio-Informatics",
"Topic :: Scientific/Engineering :: Chemistry",
"Programming Language :: C++",
"Programming Language :: Python :: 3",
]
dependencies = ["numpy", "scipy>=1.13", "scikit-learn>=1.6"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/scotthoh/BOBKit"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.8"
experimental = true # for install-dir
# minimum cmake version
cmake.version = ">=3.20"
ninja.version = ">=1.11"
# Setuptools style build caching in a local directory
build-dir = "build/{wheel_tag}"
wheel.install-dir = "/data"
# Build stable ABI wheels for CPython 3.11+
# wheel.py-api = "cp311"


wheel.packages = []
sdist.exclude = [".github"]
sdist.include = [
"./README.md",
"./LICENSE.txt",
"./CMakeLists.txt",
"./pyproject.toml",
"include/buccaneer/*.h",
"reference_data",
"python/*.cpp",
"python/*.h",
"python/version.hpp",
]
cmake.build-type ="Release"
cmake.verbose = true

[project.scripts]
pybuccaneer = "bobkit._scripts.buccaneer:main"

[tool.scikit-build.cmake.define]
BUCCANEER_PROFILE = "ON"
BUILD_OWN_FFTW3 = "ON"
GENERATE_STUBS = "ON"

# Get version from python/version.hpp file
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/version.hpp"
regex = "#define BOBKIT_VERSION \"(?P<value>[0-9dev.-]+)\""

#[tool.pytest.ini_options]
#minversion = "6.0"
#addopts = ["-ra", "-q"]
#testpaths = ["tests"]
